# aoc2020

./: .gitmodules  CMakeLists.txt  constants.h  main.cpp  util.h
AOCpp/: .gitignore  CMakeLists.txt
AOCpp/libs/: CMakeLists.txt
AOCpp/src/: main.cpp  util.hpp
tests/: CMakeLists.txt  tests.cpp
